[package]
name = "dash-client"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
ark-api = { path = "../../ark/api" }
dash-api = { path = "../api" }
dash-provider-api = { path = "../provider/api" }
vine-api = { path = "../../vine/api" }

anyhow = { workspace = true }
derivative = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = [] }
serde_json = { workspace = true }
tracing = { workspace = true }
