[package]
name = "dash-collector"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["exporter-messenger", "grpc", "http", "logs", "metrics", "trace"]

# telemetry pillars and functions
logs = ["opentelemetry-proto?/logs"]
metrics = ["opentelemetry-proto?/metrics"]
trace = ["opentelemetry-proto?/trace"]

# grpc using tonic
grpc = [
    "async-trait",
    "opentelemetry-proto/gen-tonic",
    "serde",
    "serde_json",
    "tonic",
]
grpc-tls = ["tonic/tls"]
grpc-tls-roots = ["grpc-tls", "tonic/tls-roots"]

# http binary
http = []

# exporters
exporter = ["ark-core-k8s", "async-trait", "exporter-messenger"]
exporter-messenger = [
    "clap",
    "dash-pipe-provider",
    "exporter",
    "futures",
    "serde_json",
]

[dependencies]
ark-core = { path = "../../ark/core" }
ark-core-k8s = { path = "../../ark/core/k8s", optional = true, features = [
    "data",
] }
dash-pipe-provider = { path = "../pipe/provider", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
opentelemetry-proto = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
