[package]
name = "dash-collector"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["exporter-storage", "grpc", "http", "logs", "metrics", "trace"]

# telemetry pillars and functions
logs = ["kube", "opentelemetry-proto?/logs"]
metrics = ["kube", "opentelemetry-proto?/metrics"]
trace = ["dash-collector-api/metrics", "kube", "opentelemetry-proto?/trace"]

# grpc using tonic
grpc = [
    "async-trait",
    "opentelemetry-proto/gen-tonic",
    "serde",
    "serde_json",
    "tonic",
]
grpc-tls = ["grpc", "tonic/tls"]
grpc-tls-roots = ["grpc", "grpc-tls", "tonic/tls-roots"]

# http binary
http = []

# exporters
exporter = ["ark-core-k8s", "async-trait"]
exporter-messenger = [
    "clap",
    "dash-pipe-provider",
    "exporter",
    "futures",
    "serde_json",
]
exporter-storage = [
    "clap",
    "dash-pipe-api",
    "dash-pipe-provider",
    "exporter",
    "opentelemetry-proto/with-schemars",
]

# kubernetes
kube = ["k8s-openapi", "dep:kube"]

[dependencies]
ark-core = { path = "../../ark/core" }
ark-core-k8s = { path = "../../ark/core/k8s", optional = true, features = [
    "data",
] }
dash-collector-api = { path = "./api", optional = true }
dash-pipe-api = { path = "../pipe/api", optional = true }
dash-pipe-provider = { path = "../pipe/provider", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true, optional = true }
clap = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
k8s-openapi = { workspace = true, optional = true }
kube = { workspace = true, optional = true }
opentelemetry-proto = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }
