[package]
name = "dash-gateway"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core", features = ["actix-web"] }
dash-api = { path = "../api" }
dash-provider = { path = "../provider" }
dash-provider-api = { path = "../provider/api" }
dash-provider-client = { path = "../provider/client", features = [
    "dash-provider",
] }
kiss-plugin = { path = "../../kiss/plugin" }
vine-api = { path = "../../vine/api" }
vine-plugin = { path = "../../vine/plugin" }
vine-rbac = { path = "../../vine/rbac", features = ["actix", "serde"] }

actix-cors = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
serde_json = { workspace = true }
