[package]
name = "dash-gateway"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core", features = ["actix-web"] }
dash-api = { path = "../api" }
dash-provider = { path = "../provider" }
dash-provider-api = { path = "../provider/api" }
dash-provider-client = { path = "../provider/client", features = [
    "dash-provider",
] }
vine-api = { path = "../../vine/api" }
vine-plugin = { path = "../../vine/plugin" }
vine-rbac = { path = "../../vine/rbac", features = ["actix", "serde"] }

actix-cors = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
serde_json = { workspace = true }
