[package]
name = "dash-network"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
dash-collector-api = { path = "../collector/api" }
dash-network-api = { path = "./api" }
dash-pipe-provider = { path = "../pipe/provider" }

actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-proto = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
