[package]
name = "dash-optimizer"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
dash-api = { path = "../api" }
dash-optimizer-fallback = { path = "./fallback" }
dash-pipe-provider = { path = "../pipe/provider" }
dash-provider-api = { path = "../provider/api" }

anyhow = { workspace = true }
async-trait = { workspace = true }
byte-unit = { workspace = true }
ndarray = { workspace = true }
kube = { workspace = true }
or-tools = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
