[package]
name = "dash-optimizer"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
dash-api = { path = "../api" }
dash-collector-api = { path = "../collector/api" }
dash-collector-world = { path = "../collector/world" }
dash-optimizer-api = { path = "./api" }
dash-pipe-api = { path = "../pipe/api" }
dash-pipe-provider = { path = "../pipe/provider" }

anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kube = { workspace = true }
opentelemetry = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
