[package]
name = "dash-provider"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
i-want-to-cleanup-all-before-running-for-my-testing = []

[dependencies]
ark-core-k8s = { path = "../../ark/core/k8s", features = ["data", "domain"] }
dash-api = { path = "../api" }
dash-provider-api = { path = "./api" }

actix-web = { workspace = true, default-features = false }
anyhow = { workspace = true }
argon2 = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
byte-unit = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
futures = { workspace = true }
inflector = { workspace = true }
itertools = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
maplit = { workspace = true }
mime = { workspace = true }
minio = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true, features = ["json"] } # depends on minio
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sio = { workspace = true }
tera = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
