[package]
name = "kiss-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of NetAI Cloud"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }

inflector = { package = "Inflector", version = "0.11" }
kube = { version = "0.74", default-features = false, features = [
    "client",
    "derive",
    "runtime",
    "rustls-tls",
] }
k8s-openapi = { version = "0.15", features = ["schemars", "v1_24"] }
schemars = { version = "0.8", features = ["chrono", "derive", "uuid1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.24", features = ["derive"] }
url = { version = "2.2", features = ["serde"] }
