[package]
name = "kiss-assets"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of NetAI Cloud"
documentation = "https://docs.rs/kiss-runtime"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
kiss-api = { path = "../api" }

actix-web = { version = "4.2", features = ["experimental-io-uring", "macros"] }
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
reqwest-middleware = "0.1"
