[package]
name = "kiss-gateway"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of NetAI Cloud"
documentation = "https://docs.rs/kiss-gateway"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
kiss-api = { path = "../api" }

actix-web = { version = "4.1", default-features = false, features = ["rustls"] }
