[package]
name = "kiss-gateway"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
kiss-api = { path = "../api" }

actix-web = { workspace = true }
actix-web-opentelemetry = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
serde_json = { workspace = true }
tracing = { workspace = true }
