[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { git = "https://github.com/ulagbulag-village/ipis" }
kiss-api = { path = "../api" }

octocrab = { git = "https://github.com/ulagbulag-village/octocrab", default-features = false, features = [
    "rustls-tls",
] }
semver = "1.0"
