[package]
name = "kiss-plugin"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core", features = ["actix-web"] }
ark-api = { path = "../../ark/api" }
kiss-api = { path = "../api" }
vine-api = { path = "../../vine/api" }
vine-rbac = { path = "../../vine/rbac", features = ["actix", "serde"] }
vine-session = { path = "../../vine/session", features = ["exec"] }

actix-web = { workspace = true }
futures = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
