[package]
name = "netai-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { workspace = true }

actix-multipart = { workspace = true }
actix-web = { workspace = true }
bytes = { workspace = true }
image = { workspace = true }
inflector = { workspace = true }
mime = { workspace = true }
ort = { workspace = true }
reqwest = { workspace = true }
rust-tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
