[package]
name = "netai-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
actix = ["actix-multipart", "actix-web"]

[dependencies]
actix-multipart = { workspace = true, optional = true }
actix-web = { workspace = true, optional = true }
futures = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
