[package]
name = "netai-solver"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-core = { path = "../../ark/core" }
netai-api = { path = "../api", features = ["actix"] }

actix-multipart = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
half = { workspace = true }
image = { workspace = true, features = [
    "bmp",
    "dds",
    "dxt",
    "farbfeld",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "jpeg_rayon",
    "openexr",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
itertools = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
reqwest = { workspace = true }
rust-tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["process"] }
