[package]
name = "netai-solver"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
ark-core = { path = "../../ark/core" }
netai-api = { path = "../api", features = ["actix"] }

actix-multipart = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, optional = true }
futures = { workspace = true }
half = { workspace = true }
image = { workspace = true, features = [
    "bmp",
    "dds",
    "dxt",
    "farbfeld",
    "gif",
    "hdr",
    "ico",
    "jpeg",
    "jpeg_rayon",
    "openexr",
    "png",
    "pnm",
    "qoi",
    "tga",
    "tiff",
    "webp",
] }
itertools = { workspace = true }
mime = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
reqwest = { workspace = true }
rust-tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["process"] }
tracing = { workspace = true }
