[package]
name = "proxyx-api"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of OpenARK"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../../README.md"
homepage = "https://github.com/ulagbulag/OpenARK"
repository = "https://github.com/ulagbulag/OpenARK"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-api = { path = "../../dash/api" }
netai-api = { path = "../../netai/api" }
netai-client = { path = "../../netai/client" }
proxyx-storage-influxdb = { path = "../storage/influxdb" }

anyhow = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
language-tags = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
