[package]
name = "proxyx-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash-api = { path = "../../dash/api" }
netai-api = { path = "../../netai/api" }
netai-client = { path = "../../netai/client" }
proxyx-storage-influxdb = { path = "../storage/influxdb" }

anyhow = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
language-tags = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
