[package]
name = "straw-api"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
plugin = ["anyhow", "async-trait", "kube"]

[dependencies]
ark-core-k8s = { path = "../../ark/core/k8s", features = ["data"] }

anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, optional = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
schemars = { workspace = true }
serde = { workspace = true }
