[package]
name = "straw-cli"

authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "straw"
path = "./src/main.rs"

[dependencies]
ark-core = { path = "../../ark/core" }
ark-core-k8s = { path = "../../ark/core/k8s", features = ["data"] }
straw-api = { path = "../api" }
straw-provider = { path = "../provider" }

anyhow = { workspace = true }
clap = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
