[package]
name = "straw-provider"

authors = { workspace = true }
description = { workspace = true }
documentation = { workspace = true }
edition = { workspace = true }
include = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "ai",  # exclude(alpine)
    "oci",
]
ai = ["dash-pipe-function-ai"] # exclude(alpine)
oci = ["ark-core-k8s"]

[dependencies]
ark-core-k8s = { path = "../../ark/core/k8s", optional = true, features = [
    "data",
] }
dash-pipe-function-ai = { path = "../../dash/pipe/functions/ai", optional = true, features = [ # exclude(alpine)
    "straw", # exclude(alpine)
] } # exclude(alpine)
straw-api = { path = "../api", features = ["plugin"] }

anyhow = { workspace = true }
futures = { workspace = true }
kube = { workspace = true, features = [
    "client",
    "runtime",
    "rustls-tls",
    "ws",
] }
