[package]
name = "vine-bastion"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "Kubernetes Is Simple, Stupid which a part of NetAI Cloud"
documentation = "https://docs.rs/kiss-api"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
readme = "../README.md"
homepage = "https://github.com/ulagbulag-village/netai-cloud"
repository = "https://github.com/ulagbulag-village/netai-cloud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipis = { workspace = true }
vine-api = { path = "../api" }
vine-rbac = { path = "../rbac" }

actix-web = { workspace = true }
actix-web-lab = { workspace = true }
